<resources>
    <string name="app_name">Linear Regression Calculator</string>
    <string name="menu_about">About</string>
    <string name="menu_about_desc">About this app</string>

    <!-- Strings used for fragments for navigation -->
    <string name="input_fragment_label">Input Data</string>
    <string name="graph_fragment_label">Visualisation of J()</string>

    <string name="input_label_training_data">Training Data (each on a new line)</string>
    <string name="input_label_xs">X values</string>
    <string name="input_label_ys">Y values</string>
    <string name="input_label_configuration">Configuration</string>
    <string name="input_label_learning_rate">Learning Rate</string>
    <string name="input_label_polynomial_degree">Polynomial Degree</string>
    <string name="radio_type_gradient_descent_text">Gradient Descent</string>
    <string name="radio_type_normal_equation_text">Normal Equation</string>
    <string name="begin_calculation_button_text">Begin Calculation</string>
    <string name="theta_result">Calculated theta: %s.</string>

    <string name="error_title">Sorry, try again!</string>
    <string name="error_body_training_data_not_number">One or more of the provided training data are not valid numbers!</string>
    <string name="error_body_training_data_too_little">There has to be n > 1 input data!</string>
    <string name="error_body_training_data_mismatch">The number of training data don\'t match for x and y!</string>
    <string name="error_body_learning_rate_not_number">The learning rate appears to not be a valid decimal number! Try values between 0.01–0.03 to start.</string>
    <string name="error_body_polynomial_not_number">The polynomial has to be a valid integer, within logically acceptable ranges!</string>

    <string name="about_about_heading">About This App</string>
    <string name="about_about_body">I\'m Yuto Takano (moa17stock@gmail.com) and I made Linear Regression Calculator. I used this project to kickstart my adventure into Java and Android programming, and to also implement a practical Linear Regression algorithm.</string>
    <string name="about_license_heading">Licensing</string>
    <string name="about_license_body">This app uses OjAlgo by Optimatika to ease matrix calculation. OjAlgo is released under the MIT license.</string>
    <string name="about_license_fullbody">MIT License\n\nCopyright © 2003-2017 Optimatika\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
</resources>
