<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about_about_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_about_heading"
                android:textAlignment="center"
                android:textSize="30sp"
                android:typeface="sans"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/about_about_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_about_body"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/about_license_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about_license_heading"
                android:textAlignment="center"
                android:textSize="30sp"
                android:typeface="sans"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/about_license_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_license_body"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/about_license_fullbody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_license_fullbody"
                android:textAlignment="viewStart"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>