<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".InputFragment">

    <LinearLayout
        android:id="@+id/inputFormLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout">

        <TextView
            android:id="@+id/input_section_training_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_label_training_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldXs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/input_label_xs"
                app:boxBackgroundColor="@color/colorAccentLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputXs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="-1234567890.\n"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:maxLines="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldYs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:hint="@string/input_label_ys"
                app:boxBackgroundColor="@color/colorAccentLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputYs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="-1234567890.\n"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:maxLines="10" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/input_section_configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/input_label_configuration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldLearningRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/input_label_learning_rate"
                app:boxBackgroundColor="@color/colorAccentLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLearningRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:hint="@string/input_label_polynomial_degree"
                app:boxBackgroundColor="@color/colorAccentLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPolynomial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFormLayout">

        <RadioGroup
            android:id="@+id/radioTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/begin_calculation_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioTypeGradientDescent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_type_gradient_descent_text" />

            <RadioButton
                android:id="@+id/radioTypeNormalEquation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_type_normal_equation_text" />

        </RadioGroup>

        <Button
            android:id="@+id/begin_calculation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:text="@string/begin_calculation_button_text"
            app:layout_constraintTop_toBottomOf="@id/radioTypeGroup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>